@@ -1,5 +1,10 @@
 package nz.ac.canterbury.seng302.gardenersgrove.controller;
 
+import nz.ac.canterbury.seng302.gardenersgrove.entity.Garden;
+import nz.ac.canterbury.seng302.gardenersgrove.entity.Gardener;
+import nz.ac.canterbury.seng302.gardenersgrove.entity.IdentifiedPlant;
+import nz.ac.canterbury.seng302.gardenersgrove.entity.IdentifiedPlantSpecies;
+import nz.ac.canterbury.seng302.gardenersgrove.service.*;
 import jakarta.servlet.http.HttpServletRequest;
 import nz.ac.canterbury.seng302.gardenersgrove.entity.*;
 import nz.ac.canterbury.seng302.gardenersgrove.service.GardenService;
@@ -17,6 +22,11 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
+
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -29,8 +39,8 @@ import static java.lang.Long.parseLong;
  */
 @Controller
 public class CollectionsController {
-    private final PlantIdentificationService plantIdentificationService;
-
+    private final IdentifiedPlantService identifiedPlantService;
+    private final ImageService imageService;
     Logger logger = LoggerFactory.getLogger(CollectionsController.class);
 
     private int pageSize;
@@ -42,18 +52,22 @@ public class CollectionsController {
     private final RequestService requestService;
     private Gardener gardener;
 
+    private final String paginationMessageAttribute = "paginationMessage";
+
+    private final String errorOccurredAttribute = "errorOccurred";
+
+    private final String showModalAttribute = "showModal";
+
     /**
      * Constructor to instantiate CollectionsController
-     * @param plantIdentificationService the service used to interact with database
      * @param gardenService used in conjunction with gardener form service to populate navbar
      * @param gardenerFormService used in conjunction with above to populate navbar
      */
-    public CollectionsController(PlantIdentificationService plantIdentificationService, GardenService gardenService,
-             GardenerFormService gardenerFormService, RequestService requestService) {
-        this.plantIdentificationService = plantIdentificationService;
+    public CollectionsController(ImageService imageService, GardenService gardenService, GardenerFormService gardenerFormService, IdentifiedPlantService identifiedPlantService) {
+        this.imageService = imageService;
         this.gardenService = gardenService;
         this.gardenerFormService = gardenerFormService;
-        this.requestService = requestService;
+        this.identifiedPlantService = identifiedPlantService;
         pageSize = 12;
     }
 
@@ -88,7 +102,7 @@ public class CollectionsController {
         gardenerOptional.ifPresent(value -> gardener = value);
 
         int pageNo = ValidityChecker.validatePageNumber(pageNoString);
-        Page<IdentifiedPlantSpecies> speciesList = plantIdentificationService.getGardenerPlantSpeciesPaginated(pageNo, pageSize, gardener.getId());
+        Page<IdentifiedPlantSpecies> speciesList = identifiedPlantService.getGardenerPlantSpeciesPaginated(pageNo, pageSize, gardener.getId());
         logger.info("GET /myCollection");
         model.addAttribute("speciesList", speciesList);
         int totalPages = speciesList.getTotalPages();
@@ -97,17 +111,28 @@ public class CollectionsController {
             int upperBound = Math.min(pageNo + 3, totalPages);
             List<Integer> pageNumbers = IntStream.rangeClosed(lowerBound, upperBound)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
             model.addAttribute("pageNumbers", pageNumbers);
 
             long totalItems = speciesList.getTotalElements();
             int startIndex = pageSize * pageNo + 1;
             long endIndex = Math.min((long) pageSize * (pageNo + 1), totalItems);
             String paginationMessage = "Showing results " + startIndex + " to " + endIndex + " of " + totalItems;
-            model.addAttribute("paginationMessage", paginationMessage);
+            model.addAttribute(paginationMessageAttribute, paginationMessage);
         } else {
             String paginationMessage = "Showing results 0 to 0 of 0";
-            model.addAttribute("paginationMessage", paginationMessage);
+            model.addAttribute(paginationMessageAttribute, paginationMessage);
+        }
+
+        // need to add to model so that the navbar can populate the dropdown
+        List<Garden> gardens = gardenService.getGardensByGardenerId(gardener.getId());
+        model.addAttribute("gardens", gardens);
+
+        if(!model.containsAttribute(errorOccurredAttribute)) {
+            model.addAttribute(errorOccurredAttribute, false);
+        }
+        if (!model.containsAttribute(showModalAttribute)) {
+            model.addAttribute(showModalAttribute, false);
         }
 
         // need to add to model so that the navbar can populate the dropdown
@@ -117,6 +142,14 @@ public class CollectionsController {
         return "myCollectionTemplate";
     }
 
+
+    /**
+     * Displays all the plants that have been added to the collection that are a part of the specified species
+     * @param speciesName the name of the species
+     * @param pageNoString the page number
+     * @param model the model
+     * @return the collection details template
+     */
     @GetMapping("/collectionDetails")
     public String getSpeciesDetails(
             @RequestParam(name = "speciesName") String speciesName,
@@ -125,9 +158,8 @@ public class CollectionsController {
 
         Optional<Gardener> gardenerOptional = getGardenerFromAuthentication();
         gardenerOptional.ifPresent(value -> gardener = value);
-
         int pageNo = ValidityChecker.validatePageNumber(pageNoString);
-        Page<IdentifiedPlant> collectionsList = plantIdentificationService.getGardenerPlantsBySpeciesPaginated(pageNo, pageSize, gardener.getId(), speciesName);
+        Page<IdentifiedPlant> collectionsList = identifiedPlantService.getGardenerPlantsBySpeciesPaginated(pageNo, pageSize, gardener.getId(), speciesName);
         model.addAttribute("collectionsList", collectionsList);
         model.addAttribute("speciesName", speciesName);
 
@@ -137,17 +169,17 @@ public class CollectionsController {
             int upperBound = Math.min(pageNo + 3, totalPages);
             List<Integer> pageNumbers = IntStream.rangeClosed(lowerBound, upperBound)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
             model.addAttribute("pageNumbers", pageNumbers);
 
             long totalItems = collectionsList.getTotalElements();
             int startIndex = pageSize * pageNo + 1;
             long endIndex = Math.min((long) pageSize * (pageNo + 1), totalItems);
             String paginationMessage = "Showing results " + startIndex + " to " + endIndex + " of " + totalItems;
-            model.addAttribute("paginationMessage", paginationMessage);
+            model.addAttribute(paginationMessageAttribute, paginationMessage);
         } else {
             String paginationMessage = "Showing results 0 to 0 of 0";
-            model.addAttribute("paginationMessage", paginationMessage);
+            model.addAttribute(paginationMessageAttribute, paginationMessage);
         }
 
         // Add gardens to the model for the navbar
@@ -156,6 +188,107 @@ public class CollectionsController {
 
         return "collectionDetailsTemplate";
     }
+
+
+    /**
+     * This post method is used when the user manually adds a plant to their collection. It validates all the user inputs
+     * and adds error messages where appropriate.
+     *
+     * @param plantName the name of the plant
+     * @param description the description of the plant
+     * @param scientificName the scientific name of the plant
+     * @param uploadedDate the date uploaded
+     * @param isDateInvalid whether HTML picked up a date error or not
+     * @param plantImage the image uploaded for the plant
+     * @param redirectAttributes used to add flash attributes for redirection.
+     * @return returns the my collection template
+     */
+    @PostMapping("/myCollection")
+    public String addPlantToCollection(
+            @RequestParam (name="plantName") String plantName,
+            @RequestParam (name="description", required = false) String description,
+            @RequestParam (name="scientificName", required = false) String scientificName,
+            @RequestParam (name="uploadedDate", required = false) LocalDate uploadedDate,
+            @RequestParam(name = "isDateInvalid", required = false) boolean isDateInvalid,
+            @RequestParam ("plantImage") MultipartFile plantImage,
+            RedirectAttributes redirectAttributes
+    ) {
+        logger.info("/myCollection/addNewPlantToMyCollection");
+        Optional<Gardener> gardenerOptional = getGardenerFromAuthentication();
+        gardenerOptional.ifPresent(value -> gardener = value);
+
+        String validatedPlantName = ValidityChecker.validatePlantName(plantName);
+        String validatedScientificName = ValidityChecker.validateScientificPlantName(scientificName);
+        String validatedPlantDescription = ValidityChecker.validatePlantDescription(description);
+
+        boolean isValid = true;
+
+        if (isDateInvalid) {
+            String dateError = "Date is not in valid format, DD/MM/YYYY";
+            redirectAttributes.addFlashAttribute("dateError", dateError);
+            isValid = false;
+        }
+
+        if (!Objects.equals(plantName, validatedPlantName)) {
+            redirectAttributes.addFlashAttribute("plantNameError", validatedPlantName);
+            isValid = false;
+        }
+        if (!Objects.equals(scientificName, validatedScientificName)) {
+            redirectAttributes.addFlashAttribute("scientificNameError", validatedScientificName);
+            isValid = false;
+        }
+        if (!Objects.equals(description, validatedPlantDescription)) {
+            redirectAttributes.addFlashAttribute("descriptionError", validatedPlantDescription);
+            isValid = false;
+        }
+
+        if(!plantImage.isEmpty()) {
+            Optional<String> uploadMessage = imageService.checkValidImage(plantImage);
+            if(uploadMessage.isPresent()) {
+                redirectAttributes.addFlashAttribute("uploadError", uploadMessage.get());
+                isValid = false;
+            }
+        }
+
+        if(isValid) {
+            IdentifiedPlant identifiedPlant = new IdentifiedPlant(plantName, gardener);
+
+            if(description != null && !description.trim().isEmpty()) {
+                identifiedPlant.setDescription(description);
+            }
+            if(scientificName != null && !scientificName.trim().isEmpty()) {
+                identifiedPlant.setSpeciesScientificNameWithoutAuthor(scientificName);
+            } else {
+                identifiedPlant.setSpeciesScientificNameWithoutAuthor("No Species");
+            }
+            if(uploadedDate != null) {
+                DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+                identifiedPlant.setDateUploaded(uploadedDate.format(formatter));
+            }
+            if(plantImage.isEmpty()) {
+                identifiedPlant.setUploadedImage("/images/placeholder.jpg");
+                identifiedPlantService.saveIdentifiedPlantDetails(identifiedPlant);
+            } else {
+                identifiedPlantService.saveIdentifiedPlantDetails(identifiedPlant);
+                imageService.saveCollectionPlantImage(plantImage, identifiedPlant);
+            }
+            return "redirect:/myCollection";
+        } else {
+            redirectAttributes.addFlashAttribute("plantName", plantName);
+            redirectAttributes.addFlashAttribute("description", description);
+            redirectAttributes.addFlashAttribute("scientificName", scientificName);
+            redirectAttributes.addFlashAttribute("uploadedDate", uploadedDate);
+            redirectAttributes.addFlashAttribute(errorOccurredAttribute, true);
+            redirectAttributes.addFlashAttribute(showModalAttribute, true);
+
+            return "redirect:/myCollection";
+        }
+
+
+
+
+    }
+
 
     /**
      *
@@ -255,4 +388,5 @@ public class CollectionsController {
             return "editIdentifiedPlantForm";
         }
     }
+
 }
